Fix flakiness PasswordManagerBrowserTestBase.UsernameChanged.

This CL fixes WaitForElementValue test helper function. Without
this patch, injected test scripts might send many messages but
only one is expected. As result subsequent result of JS scripts
could be this messages. That leads to flakiness for exmaple
https://logs.chromium.org/v/?s=chromium%2Fbb%2Fchromium.memory%2FLinux_ASan_Tests__sandboxed_%2F42632%2F%2B%2Frecipes%2Fsteps%2Finteractive_ui_tests%2F0%2Flogs%2FPasswordManagerBrowserTestBase.UsernameChanged%2F0


Bug: 799924
Change-Id: I50cb28198cce1e585a0e8966646baeae68571b6c
Reviewed-on: https://chromium-review.googlesource.com/860649
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528655}
Former-commit-id: ebe35c454f68a40334f4e5d8186c51de328d5069